# pos_return_partial_posting

./: README.md  pyproject.toml
pos_return_partial_posting/: hooks.py  modules.txt
pos_return_partial_posting/fixtures/: custom_field.json  property_setter.json
pos_return_partial_posting/pos_return_partial_posting/events/: payment_entry_events.py  pos_invoice_events.py
pos_return_partial_posting/pos_return_partial_posting/overrides/: pos_invoice_merge_log_overrides.py  sales_invoice_overrides.py
